# MesSimpleSyncChat

./: CMakeCache.txt  CMakeLists.txt
client/: CMakeLists.txt
server/: CMakeLists.txt
